CMAKE_MINIMUM_REQUIRED(VERSION 3.22)

PROJECT(My_Realsense VERSION 1.0)

OPTION(TESTER "Use tester" OFF)
OPTION(SENSOR "Use sensor" ON)

MESSAGE(STATUS "[INFO] Condition of TESTER:" ${TESTER})
MESSAGE(STATUS "[INFO] Condition of SENSOR:" ${SENSOR})

MESSAGE(STATUS "PROJECT_BINARY" ${PROJECT_BINARY_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sensor/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/tester/include)

ADD_EXECUTABLE(auto main.cpp)

IF(TESTER)
MESSAGE(STATUS "OPTION OF TESTER")
ENDIF()

ADD_SUBDIRECTORY(tester)
TARGET_LINK_LIBRARIES(auto tester)

IF(SENSOR)
MESSAGE(STATUS "OPTION OF SENSOR")
ENDIF()

ADD_SUBDIRECTORY(sensor)
TARGET_LINK_LIBRARIES(auto sensor)