FILE(GLOB_RECURSE source
    "src/*.cpp")

MESSAGE(STATUS "sensor module:" ${source})

# TARGET_INCLUDE_DIRECTORIES(executor )

INCLUDE_DIRECTORIES(include)

ADD_LIBRARY(sensor STATIC ${source})
# ADD_LIBRARY(sensor )
# MESSAGE(STATUS "PROJECT_BINARY-----" ${PROJECT_SOURCE_DIR} "/include")

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

SET(DEPENDENCIES ${OpenCV_LIBS} ${DEPENDENCIES})

SET(DEPENDENCIES realsense2 ${DEPENDENCIES})

TARGET_LINK_LIBRARIES(sensor ${DEPENDENCIES})